# chatgpt.js

./: .chatgpt.config.mjs  .eslintrc.js  .eslintrc.json  .gitignore  .gitlab-ci.yml  .npmignore  LICENSE  LICENSE.md  README.md  chatgpt.d.ts  chatgpt.js  chatgpt.js-4.1.0.tgz  eslint.config.mjs  function-aliases.json  package-data.json  package-lock.json  package.json  requirements-dev.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: auto-sync-build-vers-to-readmes.yml  auto-sync-chatgpt.js-to-chrome-starter.yml  auto-sync-chrome-starter.yml  auto-sync-en-readmes.yml  auto-sync-greasemonkey-starter.yml  (+23 more)
.husky/: pre-commit
data/: function-aliases.json
docs/: .npmignore  CNAME  LICENSE.md  README.md  SECURITY.md  USERGUIDE.md  _coverpage.md  copy-code.js  index.html  sitemap.xml  style.css  userguide.md
src/: chatgpt.js
tests/: max-tokens.mjs  msg-chain.mjs
translate-messages/: LICENSE.md  README.md  __main__.py  cli.json  main.py  pyproject.toml  requirements.txt
translate-messages/lib/: data.py  init.py  language.py  log.py
translate-messages/lib/data/: __init__.py  csv.py  json.py  sns.py
translate-messages/src/translate_messages/: __main__.py  package-data.json
translate-messages/src/translate_messages/assets/ascii/: logo_block.txt  logo_imperial.txt  logo_keys.txt
translate-messages/src/translate_messages/lib/: init.py  language.py  log.py
translate-messages/src/translate_messages/lib/data/: json.py
utils/: LICENSE.md  build-minified-chatgpt.js  build.sh  bump.sh  compress-to-webp.js  img-to-webp.js  minify.js  preview-docs.js  previewDocs.js  remove-json-keys.py  translate-en-messages.py  update-jsdelivr-hits-badge.js
(+449 files in other folders)
