[project]
name = "translate-messages"
version = "1.0.4"
description = "Translate en/messages.json to other locales."
authors = [{name = "Adam Lui", email = "adam@kudoai.com"}]
readme = "README.md"
dependencies = ["requests>=2.32.0,<3.0.0", "translate>=3.8.0,<4.0.0"]

[project.scripts]
translate-msgs = "translate_messages.__main__:main"
translate-messages = "translate_messages.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["package-data.json", "*.md"]
